# survey-app-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api_docs/: API_USAGE_GUIDE.md  README.md  examples.py
architectural_docs/: HOW_IT_WORKS.md  database_structure.md  project_requirements.md  survey_submission_lifecycle.md
audit/: admin.py  mixins.py  models.py  tests.py
audit/migrations/: 0001_initial.py  0002_initial.py
config/: celery.py  exceptions.py  settings.py  urls.py
load_tests/: README.md  __init__.py  locustfile.py
organizations/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
organizations/migrations/: 0001_initial.py
submissions/: admin.py  encryption.py  models.py  security_tests.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
submissions/management/commands/: generate_encryption_key.py
submissions/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_surveyresponse_ip_address_surveyresponse_user_agent.py  0005_add_invitation_model.py
surveys/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
surveys/migrations/: 0001_initial.py  0002_initial.py  0003_survey_organization_and_more.py
users/: admin.py  apps.py  authentication.py  models.py  permissions.py  schema.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_seed_roles_permissions.py  0003_usersession.py
