[tool.poetry]
name = "survey-api"
version = "1.0.0"
description = "Advanced Dynamic Survey Platform - Enterprise-level API for creating, deploying, and analyzing surveys"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0"
djangorestframework = "^3.16"
djangorestframework-simplejwt = "^5.5"
drf-spectacular = "^0.29"
drf-nested-routers = "^0.95"
django-cors-headers = "^4.9"
psycopg2-binary = "^2.9"
celery = "^5.6"
redis = "^7.1"
cryptography = "^46.0"
python-dotenv = "^1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-django = "^4.11"
locust = "^2.43"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "-v --tb=short"

